--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
+<!DOCTYPE html>
 <html>
+<head>
+<title>Page Title</title>
+</head>
+<body>
 
-  <body>
-    <h1>I am wei wen</h1>
-  </body>
+<h1>This is a Heading</h1>
+<p>This is a paragraph.</p>
+
+</body>
 </html>
